# miniasync

./: CMakeLists.txt
.github/workflows/: on_pull_request.yml
examples/basic/: basic.c
src/: CMakeLists.txt  mover.c  runtime.c
src/include/: future.h
src/windows/include/: srcversion.h
tests/vdm/: test_vdm.c
